Added the first time slot in html file.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-slot" id="hr-9">
+        <div class="col-md-1 ">
+          9AM
+        </div>
+        <textarea class="col-md-10"></textarea>
+        <button class="btn saveBtn col-md-1 far fa-save"></button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
