Completed the time slots for the whole day.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,65 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-slot" id="hr-9">
+      <div class="row time-slot" id="9am">
         <div class="col-md-1 ">
           9AM
+        </div>
+        <textarea class="col-md-10"></textarea>
+        <button class="btn saveBtn col-md-1 far fa-save"></button>
+      </div>
+      <div class="row time-slot" id="10am">
+        <div class="col-md-1 ">
+          10AM
+        </div>
+        <textarea class="col-md-10"></textarea>
+        <button class="btn saveBtn col-md-1 far fa-save"></button>
+      </div>
+      <div class="row time-slot" id="11am">
+        <div class="col-md-1 ">
+          11AM
+        </div>
+        <textarea class="col-md-10"></textarea>
+        <button class="btn saveBtn col-md-1 far fa-save"></button>
+      </div>
+      <div class="row time-slot" id="12pm">
+        <div class="col-md-1 ">
+          12PM
+        </div>
+        <textarea class="col-md-10"></textarea>
+        <button class="btn saveBtn col-md-1 far fa-save"></button>
+      </div>
+      <div class="row time-slot" id="1pm">
+        <div class="col-md-1 ">
+          1PM
+        </div>
+        <textarea class="col-md-10"></textarea>
+        <button class="btn saveBtn col-md-1 far fa-save"></button>
+      </div>
+      <div class="row time-slot" id="2pm">
+        <div class="col-md-1 ">
+          2PM
+        </div>
+        <textarea class="col-md-10"></textarea>
+        <button class="btn saveBtn col-md-1 far fa-save"></button>
+      </div>
+      <div class="row time-slot" id="3pm">
+        <div class="col-md-1 ">
+          3PM
+        </div>
+        <textarea class="col-md-10"></textarea>
+        <button class="btn saveBtn col-md-1 far fa-save"></button>
+      </div>
+      <div class="row time-slot" id="4pm">
+        <div class="col-md-1 ">
+          4PM
+        </div>
+        <textarea class="col-md-10"></textarea>
+        <button class="btn saveBtn col-md-1 far fa-save"></button>
+      </div>
+      <div class="row time-slot" id="5pm">
+        <div class="col-md-1 ">
+          5PM
         </div>
         <textarea class="col-md-10"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save"></button>
