Added a signature footer to html file.

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
       </div>
     </div>
 
+    <footer class="footer">Created by <a href="https://www.linkedin.com/in/bfguo/">Baofeng Guo</a> with <a>❤️</a></footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="app.js"></script>
