Updated the index.html file.

--- a/index.html
+++ b/index.html
@@ -34,63 +34,63 @@
         <div class="col-md-1 ">
           9AM
         </div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" value="10">
         <div class="col-md-1 ">
           10AM
         </div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" value="11">
         <div class="col-md-1 ">
           11AM
         </div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" value="12">
         <div class="col-md-1 ">
           12PM
         </div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" value="13">
         <div class="col-md-1 ">
           1PM
         </div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" value="14">
         <div class="col-md-1 ">
           2PM
         </div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" value="15">
         <div class="col-md-1 ">
           3PM
         </div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" value="16">
         <div class="col-md-1 ">
           4PM
         </div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" value="17">
         <div class="col-md-1 ">
           5PM
         </div>
-        <textarea class="col-md-10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
     </div>
@@ -99,6 +99,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
