Updated the script.js file.

--- a/index.html
+++ b/index.html
@@ -30,64 +30,64 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block" value="9">
-        <div class="col-md-1 ">
+      <div class="row time-block" id="hr9">
+        <div class="col-md-1 hour">
           9AM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" value="10">
-        <div class="col-md-1 ">
+      <div class="row time-block" id="hr10">
+        <div class="col-md-1 hour">
           10AM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" value="11">
-        <div class="col-md-1 ">
+      <div class="row time-block" id="hr11">
+        <div class="col-md-1 hour">
           11AM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" value="12">
-        <div class="col-md-1 ">
+      <div class="row time-block" id="hr12">
+        <div class="col-md-1 hour">
           12PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" value="13">
-        <div class="col-md-1 ">
+      <div class="row time-block" id="hr13">
+        <div class="col-md-1 hour">
           1PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" value="14">
-        <div class="col-md-1 ">
+      <div class="row time-block" id="hr14">
+        <div class="col-md-1 hour">
           2PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" value="15">
-        <div class="col-md-1 ">
+      <div class="row time-block" id="hr15">
+        <div class="col-md-1 hour">
           3PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" value="16">
-        <div class="col-md-1 ">
+      <div class="row time-block" id="hr16">
+        <div class="col-md-1 hour">
           4PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" value="17">
-        <div class="col-md-1 ">
+      <div class="row time-block" id="hr17">
+        <div class="col-md-1 hour">
           5PM
         </div>
         <textarea class="col-md-10 description"></textarea>
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <footer class="footer">Created by <a href="https://www.linkedin.com/in/bfguo/">Baofeng Guo</a> with <a>❤️</a></footer>
+    <footer class="footer">Created with <a>❤️</a> by <a href="https://www.linkedin.com/in/bfguo/">Baofeng Guo</a> </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
