--- a/index.html
+++ b/index.html
@@ -30,63 +30,63 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block" id="hr9">
+      <div class="row time-block" id="9">
         <div class="col-md-1 hour">
           9AM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="hr10">
+      <div class="row time-block" id="10">
         <div class="col-md-1 hour">
           10AM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="hr11">
+      <div class="row time-block" id="11">
         <div class="col-md-1 hour">
           11AM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="hr12">
+      <div class="row time-block" id="12">
         <div class="col-md-1 hour">
           12PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="hr13">
+      <div class="row time-block" id="13">
         <div class="col-md-1 hour">
           1PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="hr14">
+      <div class="row time-block" id="14">
         <div class="col-md-1 hour">
           2PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="hr15">
+      <div class="row time-block" id="15">
         <div class="col-md-1 hour">
           3PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="hr16">
+      <div class="row time-block" id="16">
         <div class="col-md-1 hour">
           4PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="hr17">
+      <div class="row time-block" id="17">
         <div class="col-md-1 hour">
           5PM
         </div>
