Fixed the color coding issue.

--- a/index.html
+++ b/index.html
@@ -30,67 +30,67 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block" id="9">
+      <div class="row time-block" id="hour9">
         <div class="col-md-1 hour">
-          9AM
+          9:00AM
         </div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description" id="9"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="10">
+      <div class="row time-block" id="hour10">
         <div class="col-md-1 hour">
-          10AM
+          10:00AM
         </div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description" id="10"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="11">
+      <div class="row time-block" id="hour11">
         <div class="col-md-1 hour">
-          11AM
+          11:00AM
         </div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description" id="11"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="12">
+      <div class="row time-block"  id="hour12">
         <div class="col-md-1 hour">
-          12PM
+          12:00PM
         </div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description" id="12"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="13">
+      <div class="row time-block" id="hour13">
         <div class="col-md-1 hour">
-          1PM
+          1:00PM
         </div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description" id="13"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="14">
+      <div class="row time-block" id="hour14">
         <div class="col-md-1 hour">
-          2PM
+          2:00PM
         </div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description" id="14"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="15">
+      <div class="row time-block" id="hour15">
         <div class="col-md-1 hour">
-          3PM
+          3:00PM
         </div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description" id="15"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="16">
+      <div class="row time-block" id="hour16">
         <div class="col-md-1 hour">
-          4PM
+          4:00PM
         </div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description" id="16"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
-      <div class="row time-block" id="17">
+      <div class="row time-block" id="hour17">
         <div class="col-md-1 hour">
-          5PM
+          5:00PM
         </div>
-        <textarea class="col-md-10 description"></textarea>
+        <textarea class="col-md-10 description" id="17"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
     </div>
