--- a/index.html
+++ b/index.html
@@ -34,63 +34,63 @@
         <div class="col-md-1 hour">
           9:00AM
         </div>
-        <textarea class="col-md-10 description" id="9"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour10">
         <div class="col-md-1 hour">
           10:00AM
         </div>
-        <textarea class="col-md-10 description" id="10"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour11">
         <div class="col-md-1 hour">
           11:00AM
         </div>
-        <textarea class="col-md-10 description" id="11"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block"  id="hour12">
         <div class="col-md-1 hour">
           12:00PM
         </div>
-        <textarea class="col-md-10 description" id="12"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour13">
         <div class="col-md-1 hour">
           1:00PM
         </div>
-        <textarea class="col-md-10 description" id="13"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour14">
         <div class="col-md-1 hour">
           2:00PM
         </div>
-        <textarea class="col-md-10 description" id="14"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour15">
         <div class="col-md-1 hour">
           3:00PM
         </div>
-        <textarea class="col-md-10 description" id="15"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour16">
         <div class="col-md-1 hour">
           4:00PM
         </div>
-        <textarea class="col-md-10 description" id="16"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour17">
         <div class="col-md-1 hour">
           5:00PM
         </div>
-        <textarea class="col-md-10 description" id="17"></textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
       </div>
     </div>
