Updated the html file.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <textarea class="col-md-9 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
-        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Save" style="font-size:36px;"></button>
+        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Trash" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour10">
         <div class="col-md-1 hour">
@@ -44,7 +44,7 @@
         </div>
         <textarea class="col-md-9 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
-        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Save" style="font-size:36px;"></button>
+        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Trash" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour11">
         <div class="col-md-1 hour">
@@ -52,7 +52,7 @@
         </div>
         <textarea class="col-md-9 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
-        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Save" style="font-size:36px;"></button>
+        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Trash" style="font-size:36px;"></button>
       </div>
       <div class="row time-block"  id="hour12">
         <div class="col-md-1 hour">
@@ -60,7 +60,7 @@
         </div>
         <textarea class="col-md-9 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
-        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Save" style="font-size:36px;"></button>
+        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Trash" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour13">
         <div class="col-md-1 hour">
@@ -68,7 +68,7 @@
         </div>
         <textarea class="col-md-9 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
-        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Save" style="font-size:36px;"></button>
+        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Trash" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour14">
         <div class="col-md-1 hour">
@@ -76,7 +76,7 @@
         </div>
         <textarea class="col-md-9 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
-        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Save" style="font-size:36px;"></button>
+        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Trash" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour15">
         <div class="col-md-1 hour">
@@ -84,7 +84,7 @@
         </div>
         <textarea class="col-md-9 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
-        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Save" style="font-size:36px;"></button>
+        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Trash" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour16">
         <div class="col-md-1 hour">
@@ -92,7 +92,7 @@
         </div>
         <textarea class="col-md-9 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
-        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Save" style="font-size:36px;"></button>
+        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Trash" style="font-size:36px;"></button>
       </div>
       <div class="row time-block" id="hour17">
         <div class="col-md-1 hour">
@@ -100,7 +100,7 @@
         </div>
         <textarea class="col-md-9 description"></textarea>
         <button class="btn saveBtn col-md-1 far fa-save" alt="Save" style="font-size:36px;"></button>
-        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Save" style="font-size:36px;"></button>
+        <button class="btn trashBtn col-md-1 fas fa-trash-alt" alt="Trash" style="font-size:36px;"></button>
       </div>
     </div>
 
