--- a/index.html
+++ b/index.html
@@ -96,16 +96,17 @@
       </div>
     </div>
 
-    <footer class="footer"> <address>
+    <footer class="footer">
+      <address>
       <a href="mailto:peterguo1983@gmail.com"><i class="fa fa-envelope"></i></a> |
       <a href="https://github.com/magickw"><i class="fab fa-github"></i></a> |
       <a href="https://www.linkedin.com/in/bfguo"><i class="fab fa-linkedin"></i></a> |
       <a href="https://www.instagram.com/petguo"><i class="fab fa-instagram"></i></a>
     </address>
     <div class="row">
-        <p>Created with <a>❤️</a> by <a href="https://www.linkedin.com/in/bfguo/">Baofeng Guo</a>. Thank you for visiting. | Source code:
-      <a href="https://github.com/magickw/Work-Day-Scheduler"><i class="fab fa-github"></i></a> 
-  </div> </footer>
+        <p>Created with <a>❤️</a> by <a href="https://www.linkedin.com/in/bfguo/">Baofeng Guo</a>. Thank you for visiting. | Source code: <a href="https://github.com/magickw/Work-Day-Scheduler"><i class="fab fa-github"></i></a></p> 
+  </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
